# Shotluck-Holmes

./: .gitignore  LICENSE  README.md  conda_env.yml  requirements.txt  requirements_didnt_add.txt
data/: README.md  requirements.txt
data/my_annotations/: convert.py
data/scripts/: convert_shot2story_to_llava.py  download_annotations.py  download_video_onedrive.py  process_videos.py  shard_annotations.py
model/: README.md  pyproject.toml
model/scripts/tiny_llava/eval/: shot2story.sh
model/scripts/tiny_llava/finetune/: finetune_1b5.sh  finetune_2b0.sh  finetune_3b1.sh
model/tinyllava/: conversation.py
model/tinyllava/data/: dataset.py  process.py
model/tinyllava/eval/: model_shot2story.py
model/tinyllava/train/: train.py
scripts/: download-ffmpeg.sh  grab-slurm-gpus.sh  setup-speedrun.sh  tinyllava-speedrun.sh
scripts/data/download/: download_annotations.py  download_videos.py  get_existing_data.py
scripts/data/process/: convert_shot2story_to_llava.py  process_videos.py  shard_annotations.py
scripts/run/: metrics.py
scripts/run/eval/: shot2story-1.5.sh  shot2story-3.1.sh
scripts/run/finetune/: finetune_1b5.sh  finetune_2b0.sh  finetune_3b1.sh
